--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -181,7 +181,7 @@
 
                     <div class="clearfix"></div>
                     <div class="submit-main">
-                      <%= f.submit 'Save', class: 'pushbutton-wide s-button btn btn-primary' %>
+                      <%= f.submit 'Enquire', class: 'pushbutton-wide s-button btn btn-primary' %>
                     </div>
                 <% end %>
             <% end %>
