--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -4,14 +4,14 @@
   </header>
   <div class="row">
     <div class="col-xs-12">
-      <p class="lead">Lacus dolor placerat rutrum facilisi tempus mauris aenean sociis neque platea metus eros cum diam tellus facilisi ultricies lectus curae curabitur quam libero viverra nam vitae phasellus lectus primis lectus</p>
+      <p class="lead">We are passionate about our products as well as our customers. We are always there to provide the best for you. Reach out to us anytime by filling below the contact form and we will happily answer your questions.</p>
     </div>
   </div>
   <div class="gap gap-small"></div>
   <div class="row" data-gutter="60">
     <div class="col-md-5">
       <h3 class="widget-title">Leave a Message</h3>
-      <p class="text-muted">Class conubia id magna cursus conubia proin venenatis suscipit aliquet massa dui odio velit ultrices augue luctus lorem placerat tortor</p>
+      <!--<p class="text-muted">Class conubia id magna cursus conubia proin venenatis suscipit aliquet massa dui odio velit ultrices augue luctus lorem placerat tortor</p>-->
       <!--<form action="/subscribers", method="post">-->
         <%= form_tag '/subscribers', method: :post do %>
         <div class="row">
@@ -42,7 +42,7 @@
           <%= text_area_tag :message, '',class: 'form-control' %>
           <!--<textarea class="form-control"></textarea>-->
         </div>
-          <%= submit_tag 'Save', class: 'btn btn-primary', style: 'width: 100%' %>
+          <%= submit_tag 'Send', class: 'btn btn-primary', style: 'width: 100%' %>
         <!--<input class="btn btn-primary" type="submit" value="Send a Message" />-->
         <% end %>
       <!--</form>-->
