--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -129,6 +129,7 @@
     <!--Forgot Password Form Start-->
     <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-forgot-password-dialog">
       <h3 class="widget-title">Forgot Password?</h3>
+      <p>Enter your Mobile Number</p>
       <hr />
       <span class="msg-forgot-password-validation text-danger"></span>
       <input type="number" id='forgot-password' class="form-control" min="10" max="10"  />
