rahul changes commited

--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -609,6 +609,17 @@
     background-color: pink;
   }
 }
+p.lead{
+  font-size: 17px !important;
+}
+.google-map{
+  .email-con{
+    color: #416288;
+    a{
+      text-decoration: none;
+    }
+  }
+}
 @media(max-width: 767px){
   .otp-min-height{
     min-height: inherit;
