--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -49,23 +49,9 @@
     </div>
     <div class="col-md-7">
       <div class="google-map">
-        <!--<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>-->
-        <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA6tz5qy6wDGGw7Jp4DOYplCRNtSqZk4s&callback=init_map" type="text/javascript"></script>-->
-        <div style='overflow:hidden;height:400px;width:100%;'>
-          <div id='gmap_canvas' style='height:400px;width:100%;'>
-
-          </div>
-          <div>
-            <small>
-              <a href="http://embedgooglemaps.com">embed google maps</a>
-            </small>
-          </div>
-          <div>
-            <small>
-              <a href="https://termsandcondiitionssample.com">terms and conditions sample</a>
-            </small>
-          </div>
-
+        <%= image_tag "theme_img/contact_map.png", class: 'img-responsive' %>
+        <div style="margin-top: 10px" class="email-con">
+          <i class="fa fa-envelope"></i> <a href="mailto:info@byebuying.com">info@byebuying.com</a>
         </div>
       </div>
     </div>
