--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -56,17 +56,17 @@
       <span class='msg-already-registred' style="color:red">Number already registered.</span>
       <span style="color:red" class=" login-error hidden"></span>
       <div class="form-group">
-        Contact: <input type="number" class="form-control rgr-frm-mumber">
+        Enter your Mobile Number: <input type="number" class="form-control rgr-frm-mumber">
       </div>
       <div class="form-group">
-        Password: <input type="password" class="form-control rgr-frm-pwd">
+        Enter your Password: <input type="password" class="form-control rgr-frm-pwd">
       </div>
       <span class="btn btn-primary btn-sign-in">Sign In</span>
 
       <div class="gap gap-small"></div>
       <ul class="list-inline">
         <li>
-          <a href="#nav-mobile-dialog" class="popup-text">Register Here</a>
+          <a href="#nav-mobile-dialog" class="popup-text">Click to Register</a>
         </li>
         <li class="pull-right">
           <a href="#nav-forgot-password-dialog" class="popup-text">Forgot password?</a>
@@ -78,7 +78,7 @@
     <!--Registration Form Start-->
     <div class="mfp-with-anim mfp-hide mfp-dialog clearfix hdr-registration-form" id="nav-account-dialog">
       <h3 class="widget-title">Register</h3>
-      <p>Welcome, Register to get Enter</p>
+      <p>Welcome, Register to get Enter your Details</p>
       <span style="color:red" class=" registration-error hidden"></span>
       <hr />
       <div class="form-group">
@@ -115,7 +115,8 @@
 
     <!--Mobile Form Start-->
     <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-mobile-dialog">
-      <h3 class="widget-title">Mobile Number</h3>
+      <h3 class="widget-title">Register</h3>
+      <p>Enter your Mobile Number</p>
       <hr />
       <span class="msg-number-validation text-danger"></span>
       <input type="number"id='register-mobile' class="form-control" min="10" max="10"  />
@@ -153,7 +154,7 @@
       <div class="gap gap-small"></div>
       <ul class="list-inline sending-otp-box">
         <li>
-          <p style="font-size: 12px; color: #888;">Click on Send OTP to receive 4 digit verification code on your register mobile number.</p>
+          <p style="font-size: 12px; color: #888;">Click on Resend OTP to receive 4 digit verification code on your register mobile number.</p>
           <a href="javascript:void(0)" class="sending-otp">Resend OTP</a>
       </ul>
     </div>
