--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -1,4 +1,4 @@
-<header class="page-header page-header-banner">
+<header class="page-header page-header-banner" style=<%="background-image:url(#{@subcategory.interior_image(:original)}) !important"%>>
   <div class="container">
     <div class="page-header-banner-inner">
       <h1 class="page-title"><%= @subcategory.name %></h1>
