--- a/app/views/admin/services/show.html.erb
+++ b/app/views/admin/services/show.html.erb
@@ -7,7 +7,7 @@
     </ol>
   </header>
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-3 col-sm-4 col-xs-12">
       <div class="product-page-product-wrap jqzoom-stage">
         <div class="clearfix">
           <a href="../../../assets/theme_img/500x500.png" id="jqzoom" data-rel="gal-1">
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-9 col-sm-8 col-xs-12">
       <div class="row" data-gutter="10">
         <div class="col-md-8">
           <div class="box">
