--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -68,6 +68,12 @@
                   ₹<%= @product.per_month_price %>/ <span class="pull-right">month</span>
               <% end %>
             </p>
+
+            <p class="product-page-price time-price">
+              <% if  @product.per_hour_price < 1 and  @product.per_day_price < 1 and  @product.per_week_price < 1 and @product.per_month_price < 1 %>
+                  ₹ 0
+              <% end %>
+            </p>
             <!--<p class="product-page-price time-price">₹ <%#= @product.per_hour_price > 0 ?  "#{@product.per_hour_price}/Hour " : ( @product.per_day_price > 0 ?  "#{@product.per_day_price}/Day" : ( @product.per_week_price > 0 ? "#{@product.per_week_price}/Week" : ( @product.per_month_price > 0 ?  "#{@product.per_month_price}/Month" : 0 ))) %></p>-->
             <% if current_user.present? %>
                 <% if current_user.id == @product.user.id %>
