--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -16,6 +16,7 @@
         <th>Icon image</th>
         <th>Detail image</th>
         <th>Action</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -27,6 +28,15 @@
             <td>
               <%= link_to edit_admin_category_path(category) do %>
                   <i class="fa fa-edit"></i>
+              <%- end %>
+            </td>
+            <td>
+              <% if category.is_verified? %>
+                  <span class="text-success">Verified</span>
+                  <%= link_to( 'Un-verify' , admin_approve_admin_category_path(category, is_verified: false), method: :put, class: 'btn btn-danger btn-xs') %>
+              <%- else %>
+                  <span class="text-danger">Not verified</span>
+                  <%= link_to( 'Verify' , admin_approve_admin_category_path(category, is_verified: true), method: :put, class: 'btn btn-success btn-xs') %>
               <%- end %>
             </td>
           </tr>
