--- a/app/views/admin/subcategories/index.html.erb
+++ b/app/views/admin/subcategories/index.html.erb
@@ -17,6 +17,7 @@
         <th>Category</th>
         <th>Type</th>
         <th>Action</th>
+        <th></th>
       </tr>
       </thead>
       <% @subcategories.each do |subcategory| %>
@@ -28,6 +29,15 @@
               <%= link_to edit_admin_subcategory_path(subcategory) do %>
                   <i class="fa fa-edit"></i>
               <% end %>
+            </td>
+            <td>
+              <% if subcategory.is_verified? %>
+                  <span class="text-success">Verified</span>
+                  <%= link_to( 'Un-verify' , admin_approve_admin_subcategory_path(subcategory, is_verified: false), method: :put, class: 'btn btn-danger btn-xs') %>
+              <%- else %>
+                  <span class="text-danger">Not verified</span>
+                  <%= link_to( 'Verify' , admin_approve_admin_subcategory_path(subcategory, is_verified: true), method: :put, class: 'btn btn-success btn-xs') %>
+              <%- end %>
             </td>
           </tr>
       <%- end %>
